# code-analyzer

./: .env  .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt  run_analysis.py  setup.bat  setup.sh
config/: default.yaml
output/: codebase_analysis.json
src/: analyzer.py  chunking.py  mock_data.py  models.py  parsers.py  preprocessor.py  reader.py
tests/: test_chunking.py  test_integration.py  test_parsers.py  test_preprocessor.py
