[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "codebase-analyzer"
version = "1.0.0"
description = "Production-grade codebase analysis using LLMs"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "langchain>=0.2.0,<0.4.0",
    "langchain-openai>=0.1.0,<0.3.0",
    "openai>=1.30.0",
    "tiktoken>=0.7.0",
    "pydantic>=2.7.0,<3.0.0",
    "pydantic-settings>=2.3.0",
    "tree-sitter>=0.21.0",
    "tree-sitter-java>=0.21.0",
    "diskcache>=5.6.3",
    "tenacity>=8.3.0",
    "structlog>=24.1.0",
    "rich>=13.7.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
codebase-analyzer = "src.codebase_analyzer.cli:main"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["src/tests"]
asyncio_mode = "auto"
